syntax = "proto3";
import "pkg/proto/types.proto";
package proto;
option go_package = "github.com/eduardonunesp/kvzica/pkg/proto";

service KeyValueService {
    rpc SetKeyValue(KeyValueRequest) returns (KeyValueResponse);
    rpc GetValue(KeyRequest) returns (KeyValueResponse);
}
