syntax = "proto3";
package proto;
option go_package = "github.com/eduardonunesp/kvzica/pkg/proto";

message KeyValueRequest {
    bytes key = 1;
    bytes value = 2;
}

message KeyRequest {
    bytes key = 1;
}

enum Status {
    OK = 0;
    ERROR = 1;
}

message KeyValueResponse {
    Status status = 1;
    string message = 2;
    bytes value = 3;
}
